# src/docs/swagger_output.json
@@ -586,27 +586,6 @@
             "description": "Unprocessable Entity"
           }
         }
-      },
-      "get": {
-        "tags": [
-          "Event"
-        ],
-        "description": "Get user events",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "401": {
-            "description": "Unauthorized"
-          },
-          "422": {
-            "description": "Unprocessable Entity"
-          }
-        }
       }
     },
     "/events/{id}": {
@@ -706,14 +685,12 @@
             "description": "Unprocessable Entity"
           }
         }
-      }
-    },
-    "/events/share/{id}": {
-      "post": {
+      },
+      "get": {
         "tags": [
           "Event"
         ],
-        "description": "Generate an invite token for an event (only for the event creator)",
+        "description": "Get user events or a specific event when if is req",
         "parameters": [
           {
             "name": "id",
@@ -1868,6 +1845,59 @@
         }
       }
     },
+    "/notifications/subscribe/ios": {
+      "post": {
+        "tags": [
+          "Notifications"
+        ],
+        "description": "Souscrire un device iOS. Si l\\'utilisateur possède déjà un device de type apple, il sera supprimé et remplacé par le nouveau.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Contient le device token iOS.",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "deviceToken": {
+                  "type": "string",
+                  "example": "string"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Device iOS souscrit avec succès.",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "msg": {
+                  "type": "string",
+                  "example": "Device subscribed successfully"
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
+      }
+    },
     "/user/friends": {
       "get": {
         "tags": [
@@ -2237,6 +2267,51 @@
         }
       }
     },
+    "DeviceType": {
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "example": "string"
+        },
+        "enum": {
+          "type": "array",
+          "example": [
+            "android",
+            "apple",
+            "electron",
+            "web"
+          ],
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "Device": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 666
+        },
+        "device": {
+          "type": "string",
+          "example": "android"
+        },
+        "registerDate": {
+          "type": "string",
+          "example": "2019-01-01T00:00:00.000Z"
+        },
+        "deletedDate": {
+          "type": "string",
+          "example": "2019-01-01T00:00:00.000Z"
+        },
+        "user": {
+          "$ref": "#/definitions/User"
+        }
+      }
+    },
     "RecurrencePattern": {
       "type": "object",
       "properties": {
@@ -2430,6 +2505,10 @@
     "JoinedEventEntity": {
       "type": "object",
       "properties": {
+        "eventId": {
+          "type": "number",
+          "example": 666
+        },
         "leaveDate": {
           "type": "string",
           "example": "2019-01-01T00:00:00.000Z"
@@ -2437,9 +2516,6 @@
         "invitationStatus": {
           "type": "string",
           "example": "invited"
-        },
-        "event": {
-          "$ref": "#/definitions/Event"
         },
         "user": {
           "$ref": "#/definitions/User"
@@ -2450,6 +2526,10 @@
       "type": "object",
       "properties": {
         "id": {
+          "type": "number",
+          "example": 666
+        },
+        "folderId": {
           "type": "number",
           "example": 666
         },
@@ -2464,9 +2544,6 @@
         "leaveDate": {
           "type": "string",
           "example": "2019-01-01T00:00:00.000Z"
-        },
-        "folder": {
-          "$ref": "#/definitions/Folder"
         }
       }
     },
@@ -2525,6 +2602,12 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/Category"
+          }
+        },
+        "devices": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/Device"
           }
         },
         "events": {
